# build

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.build.txt  requirements.txt  setup.cfg  toltecmk  toltecmk-contained  toltecmk.py  toltecmk.spec
.github/workflows/: build.yml  checks.yml
docs/: build-process.md  ipk.md  recipe-format.md  writing-recipes.md
media/: Makefile  overview.tex  pics.tex  process.tex
tests/: test_arch.py  test_ipk.py  test_recipe.py  test_strip.py  test_toltec.py  test_toltecmk.py  test_version.py
tests/fixtures/basic-recipe/: package
tests/fixtures/hello/: hello.c  package
tests/fixtures/rmkit/: package
tests/fixtures/split-archs/: package
tests/fixtures/split-packages/: package
tests/foobar/: package  test.sh
tests/parser/: test_parser.py
tests/parser/003-split-archs/: package
tests/recipe_parsers/: test_installdepends.py  test_parser.py
toltec/: __init__.py  __main__.py  bash.py  builder.py  ipk.py  recipe.py  repo.py  util.py  version.py
toltec/hooks/: __init__.py  app-reload.py  install-lib.py  install_lib.py  patch_rm2fb.py  reload-oxide-apps.py  reload_oxide_apps.py  strip.py
toltec/recipe_parsers/: __init__.py  bash.py
