[project]
name = "toltecmk"
version = "0.3.1"
authors = [
  { name="Mattéo Delabre", email="git.matteo@delab.re" },
  { name="Eeems", email="eeems@eeems.email" },
]
description = "Build system used for the Toltec community repository"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Packaging",
]
keywords = [
    "build-tooling",
    "packaging",
    "distribution",
]
dynamic = ["dependencies", "readme"]

[project.urls]
"Homepage" = "https://github.com/toltec-dev/build"
"Bug Tracker" = "https://github.com/toltec-dev/build/issues"

[project.scripts]
toltecmk = "toltec.__main__:main"

[tool.setuptools]
packages = [
    "toltec",
    "toltec.recipe_parsers",
    "toltec.hooks",
]

[tool.setuptools.package-data]
toltec = ["py.typed", "*.py.typed"]
"toltec.recipe_parsers" = ["py.typed", "*.py.typed"]
"toltec.hooks" = ["py.typed", "*.py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
