[metadata]
name = toltec
version = 0.1.0
author = Mattéo Delabre
author_email = spam@delab.re
description = Build system used for the Toltec community repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/toltec-dev/build
project_urls =
    Bug Tracker = https://github.com/toltec-dev/build/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = toltec, toltec.recipe_parsers, toltec.hooks
python_requires = >=3.9
