[metadata]
name = toltecmk
version = 0.1.0
author = Mattéo Delabre
author_email = spam@delab.re
description = Build system used for the Toltec community repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/toltec-dev/build
project_urls =
    Bug Tracker = https://github.com/toltec-dev/build/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Build Tools
    Topic :: System :: Archiving :: Packaging
keywords =
    build-tooling
    packaging
    distribution

[options]
packages =
    toltec
    toltec.recipe_parsers
    toltec.hooks
install_requires =
    python-dateutil==2.8.2
    docker==5.0.0
    pyelftools==0.27
python_requires = >=3.9

[options.entry_points]
console_scripts =
    toltecmk = toltec.__main__:main
